--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,16 @@
     "tests"
   ],
   "dependencies": {
-    "lazysizes": "^2.0.4"
+    "lazysizes": "^2.0.4",
+    "masonry": "^4.2.0",
+    "imagesloaded": "^4.1.3"
+  },
+  "overrides": {
+    "masonry": {
+      "main": [
+        "./dist/masonry.pkgd.js"
+      ],
+      "dependencies": {}
+    }
   }
 }
